updated valid parentheses

--- a/0020. Valid Parentheses.ipynb
+++ b/0020. Valid Parentheses.ipynb
@@ -3,11 +3,32 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b9c153fb",
+   "id": "1a9903cc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Do a heap with a list, once right bracket encountered, start popping off and comparing"
+    "# 10-7-22. Slightly faster\n",
+    "def isValid(self, s: str) -> bool:\n",
+    "    # 1) Make a list and append left brackets into it\n",
+    "    # 2) If a right bracket is hit, pop the last element of the stack\n",
+    "    # and check that the dictionary value of that token is correct\n",
+    "    # 3) If we reach end of s, and stack is not empty, then return false\n",
+    "    stack = []\n",
+    "    d = {')': '(', '}': '{', ']':'['}\n",
+    "    for c in s:\n",
+    "        if c not in d:\n",
+    "            stack.append(c) # if not a right bracket, then put on stack\n",
+    "        else:\n",
+    "            try:\n",
+    "                if d[c] == stack.pop():\n",
+    "                    pass\n",
+    "                else:\n",
+    "                    return False\n",
+    "            except:\n",
+    "                return False\n",
+    "    if len(stack) > 0:\n",
+    "        return False\n",
+    "    return True"
    ]
   },
   {
