updated .gitignore and added probs

--- a/121. Best Time to Buy and Sell Stock.ipynb
+++ b/121. Best Time to Buy and Sell Stock.ipynb
@@ -9,19 +9,20 @@
    "source": [
     "class Solution:\n",
     "    def maxProfit(self, prices: List[int]) -> int:\n",
-    "       \n",
-    "        # Passes, but still slow\n",
+    "       # Key is if p is lower than plow, start at plow\n",
+    "       # Any higher later prices will be based off of plow\n",
+    "    \n",
+    "        # Passes, and same speed as solution\n",
     "        plow = prices[0]\n",
     "        top_profit = 0\n",
     "        \n",
     "        for p in prices:\n",
-    "            profit = p - plow\n",
+    "            profit = p-plow\n",
     "            if profit > top_profit:\n",
     "                top_profit = profit\n",
     "            if p < plow:\n",
     "                plow = p\n",
     "        return top_profit\n",
-    "        \n",
     "        \n",
     "        # # V1. Probably works, but time limit exceeded\n",
     "        # top_profit = 0\n",
