--- a/566. Reshape the Matrix.ipynb
+++ b/566. Reshape the Matrix.ipynb
@@ -21,17 +21,48 @@
    "source": [
     "class Solution:\n",
     "    def matrixReshape(self, mat: List[List[int]], r: int, c: int) -> List[List[int]]:\n",
-    "        eles = [item for sublist in mat for item in sublist]\n",
-    "        if len(eles) == r*c:\n",
-    "            l_reshaped = []\n",
-    "            for i in range(r):\n",
-    "                l_temp = eles[(i*c):(i*c)+c]\n",
-    "                l_reshaped.append(l_temp)\n",
+    "       # reshape m x n matrix into r x n\n",
+    "       # rows fill in new matrix first (row-traversing order)\n",
+    "       # Need to get indices of mat based off of R. Use modulus\n",
+    "    \n",
+    "        # Could do indices or just flatten first for ease of use\n",
+    "        \n",
+    "        if len(mat)*len(mat[0]) != r*c:\n",
+    "            return mat\n",
+    "        \n",
+    "        num = 0\n",
+    "        new_list, temp_list = [], []\n",
+    "        for l in mat:\n",
+    "            for ele in l: # Double for loop flattens elements\n",
+    "                temp_list.append(ele)\n",
+    "                num += 1\n",
+    "    \n",
+    "                if num == c:\n",
+    "                    new_list.append(temp_list)\n",
+    "                    temp_list = []\n",
+    "                    num = 0\n",
+    "        return new_list\n",
+    "    \n",
+    "    # # V2 - Numpy version works, but slower and 2x more memory intensive\n",
+    "    #     import numpy as np\n",
+    "    #     mat = np.array(mat)\n",
+    "    #     try:\n",
+    "    #         return mat.reshape(r, c)\n",
+    "    #     except:\n",
+    "    #         return mat\n",
+    "    \n",
+    "    # V1 - good\n",
+    "#     eles = [item for sublist in mat for item in sublist]\n",
+    "#         if len(eles) == r*c:\n",
+    "#             l_reshaped = []\n",
+    "#             for i in range(r):\n",
+    "#                 l_temp = eles[(i*c):(i*c)+c]\n",
+    "#                 l_reshaped.append(l_temp)\n",
     "                \n",
-    "            # l_reshaped = [eles[(i*c):(i*c)+c] for i in range(r)]\n",
-    "            return l_reshaped\n",
-    "        else:\n",
-    "            return mat"
+    "#             # l_reshaped = [eles[(i*c):(i*c)+c] for i in range(r)]\n",
+    "#             return l_reshaped\n",
+    "#         else:\n",
+    "#             return mat"
    ]
   }
  ],
