--- a/217. Contains Duplicate.ipynb
+++ b/217. Contains Duplicate.ipynb
@@ -8,29 +8,31 @@
    "outputs": [],
    "source": [
     "class Solution:\n",
-    "    # V3\n",
     "    def containsDuplicate(self, nums: List[int]) -> bool:\n",
-    "    # Could do counter with dictionary\n",
-    "    # Could try to use set?\n",
-    "    l = sorted(nums)\n",
-    "    for i in range(len(l)-1):\n",
-    "        if l[i] == l[i+1]:\n",
-    "            return True\n",
-    "    return False\n",
-    "    \n",
-    "    \n",
-    "    # V2\n",
-    "    def containsDuplicate(self, nums: List[int]) -> bool:\n",
-    "        return len(nums) != len(set(nums))\n",
-    "    \n",
-    "    # V1\n",
-    "        # d = dict()\n",
-    "        # for n in nums:\n",
-    "        #     if n in d:\n",
+    "        nums = sorted(nums)\n",
+    "        for i in range(len(nums)-1):\n",
+    "            if nums[i] == nums[i+1]:\n",
+    "                return True\n",
+    "        return False\n",
+    "\n",
+    "        # # V2\n",
+    "        # nums = sorted(nums)\n",
+    "        # for i in range(len(nums)-1):\n",
+    "        #     if nums[i] == nums[i+1]:\n",
     "        #         return True\n",
-    "        #     else:\n",
-    "        #         d[n] = 1\n",
-    "        # return False"
+    "        # return False\n",
+    "    \n",
+    "        \n",
+    "#         # V1\n",
+    "#         # Could do counter with dictionary\n",
+    "#         # Could try to use set?\n",
+    "#         l = sorted(nums)\n",
+    "#         for i in range(len(l)-1):\n",
+    "#             if l[i] == l[i+1]:\n",
+    "#                 return True\n",
+    "#         return False\n",
+    "    \n",
+    "#         # return len(nums) != len(set(nums))"
    ]
   }
  ],
