--- a/53. Maximum Subarray.ipynb
+++ b/53. Maximum Subarray.ipynb
@@ -25,20 +25,31 @@
    "outputs": [],
    "source": [
     "# Kadane's algorithm\n",
-    "def maxSubArray(self, nums: List[int]) -> int:\n",
-    "    # Keep a subarray where we keep adding nums to\n",
-    "    # If subarray goes negative. We drop the subarray\n",
-    "    # If subarray max increases, record in a maxSum\n",
-    "    # Iterate through list of nums\n",
+    "class Solution:\n",
+    "    def maxSubArray(self, nums: List[int]) -> int:\n",
+    "        # Keep two running variables: max_sum, and cur_sum\n",
+    "        # If cur_sum is larger than max_sum, replace\n",
+    "        max_sum = -math.inf\n",
+    "        cur_sum = 0\n",
+    "        for num in nums:\n",
+    "            cur_sum = max(num, cur_sum+num)\n",
+    "            if cur_sum > max_sum:\n",
+    "                max_sum = cur_sum\n",
+    "        return max_sum\n",
+    "        \n",
+    "#         # V1\n",
+    "#         # Keep a subarray where we keep adding nums to\n",
+    "#         # If subarray goes negative. We drop the subarray\n",
+    "#         # If subarray max increases, record in a maxSum\n",
+    "#         # Iterate through list of nums\n",
     "\n",
-    "    # Initializing with nums[0] takes care of 1 element cases\n",
-    "    bestSum = nums[0]\n",
-    "    currentSum = nums[0]\n",
-    "\n",
-    "    for n in nums[1:]: \n",
-    "        currentSum = max(n, currentSum+n)\n",
-    "        bestSum = max(bestSum, currentSum)\n",
-    "    return bestSum"
+    "#         bestSum = nums[0]\n",
+    "#         currentSum = nums[0]\n",
+    "        \n",
+    "#         for n in nums[1:]:\n",
+    "#             currentSum = max(n, currentSum+n)\n",
+    "#             bestSum = max(bestSum, currentSum)\n",
+    "#         return bestSum"
    ]
   },
   {
