updated lt sols

--- a/350. Intersection of Two Arrays II.ipynb
+++ b/350. Intersection of Two Arrays II.ipynb
@@ -9,23 +9,37 @@
    "source": [
     "class Solution:\n",
     "    def intersect(self, nums1: List[int], nums2: List[int]) -> List[int]:\n",
-    "        # Need same elements, and count as well -> use dictionary\n",
-    "        # Find intersection of keys, and then compare values and print out lowest sum\n",
+    "        # Could make counters for both. Iterating? Set would get us all the keys\n",
     "        d1, d2 = {}, {}\n",
-    "        \n",
     "        for num in nums1:\n",
-    "            d1[num] = d1.get(num,0)+1\n",
+    "            d1[num] = d1.get(num,0) + 1\n",
     "        for num in nums2:\n",
-    "            d2[num] = d2.get(num,0)+1\n",
-    "        keys = d1.keys() & d2.keys()\n",
+    "            d2[num] = d2.get(num,0) + 1\n",
     "        \n",
     "        l = []\n",
-    "        for k in keys:\n",
-    "            if d1[k] > d2[k]:\n",
-    "                l = l + [k]*d2[k]\n",
-    "            else:\n",
-    "                l = l + [k]*d1[k]\n",
-    "        return l"
+    "        for k in d1.keys():\n",
+    "            if k in d2:\n",
+    "                l = l + [k]*min(d1[k], d2[k])\n",
+    "        return l\n",
+    "        \n",
+    "#         # V1\n",
+    "#         # Need same elements, and count as well -> use dictionary\n",
+    "#         # Find intersection of keys, and then compare values and print out lowest sum\n",
+    "#         d1, d2 = {}, {}\n",
+    "        \n",
+    "#         for num in nums1:\n",
+    "#             d1[num] = d1.get(num,0)+1\n",
+    "#         for num in nums2:\n",
+    "#             d2[num] = d2.get(num,0)+1\n",
+    "#         keys = d1.keys() & d2.keys()\n",
+    "        \n",
+    "#         l = []\n",
+    "#         for k in keys:\n",
+    "#             if d1[k] > d2[k]:\n",
+    "#                 l = l + [k]*d2[k]\n",
+    "#             else:\n",
+    "#                 l = l + [k]*d1[k]\n",
+    "#         return l"
    ]
   }
  ],
