--- a/121. Best Time to Buy and Sell Stock.ipynb
+++ b/121. Best Time to Buy and Sell Stock.ipynb
@@ -9,28 +9,43 @@
    "source": [
     "class Solution:\n",
     "    def maxProfit(self, prices: List[int]) -> int:\n",
-    "       # Key is if p is lower than plow, start at plow\n",
-    "       # Any higher later prices will be based off of plow\n",
-    "    \n",
-    "        # Passes, and same speed as solution\n",
-    "        plow = prices[0]\n",
-    "        top_profit = 0\n",
+    "        # Keep max_prof, and cur_prof variable\n",
+    "        # Need to keep track of plow\n",
+    "        # return max profit\n",
+    "        \n",
+    "        max_prof, cur_prof, plow = 0, 0, math.inf\n",
     "        \n",
     "        for p in prices:\n",
-    "            profit = p-plow\n",
-    "            if profit > top_profit:\n",
-    "                top_profit = profit\n",
+    "            cur_prof = p-plow\n",
+    "            if cur_prof > max_prof:\n",
+    "                max_prof = cur_prof\n",
     "            if p < plow:\n",
     "                plow = p\n",
-    "        return top_profit\n",
+    "        return max_prof\n",
+    "\n",
+    "#        # V2\n",
+    "#        # Key is if p is lower than plow, start at plow\n",
+    "#        # Any higher later prices will be based off of plow\n",
+    "    \n",
+    "#         # Passes, and same speed as solution\n",
+    "#         plow = prices[0]\n",
+    "#         top_profit = 0\n",
     "        \n",
-    "        # # V1. Probably works, but time limit exceeded\n",
-    "        # top_profit = 0\n",
-    "        # for i, p in enumerate(prices):\n",
-    "        #     profit = max(prices[i:]) - p\n",
-    "        #     if profit > top_profit:\n",
-    "        #         top_profit = profit\n",
-    "        # return top_profit"
+    "#         for p in prices:\n",
+    "#             profit = p-plow\n",
+    "#             if profit > top_profit:\n",
+    "#                 top_profit = profit\n",
+    "#             if p < plow:\n",
+    "#                 plow = p\n",
+    "#         return top_profit\n",
+    "        \n",
+    "#         # # V1. Probably works, but time limit exceeded\n",
+    "#         # top_profit = 0\n",
+    "#         # for i, p in enumerate(prices):\n",
+    "#         #     profit = max(prices[i:]) - p\n",
+    "#         #     if profit > top_profit:\n",
+    "#         #         top_profit = profit\n",
+    "#         # return top_profit"
    ]
   }
  ],
