--- a/118. Pascal's Triangle.ipynb
+++ b/118. Pascal's Triangle.ipynb
@@ -7,32 +7,51 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Recursive solution. Create a recursive pascal function and append to top level ll\n",
     "class Solution:\n",
     "    def generate(self, numRows: int) -> List[List[int]]:\n",
-    "        # Try using recursion\n",
-    "        # Base case, and then recursive call\n",
-    "        \n",
-    "        ll = []\n",
-    "        \n",
-    "        def pascal(numRows):\n",
-    "            # print(f'Start {numRows}')\n",
-    "            l = []\n",
-    "            if numRows==1:\n",
-    "                l.append(1)\n",
+    "        # Use recursion, need base case of [[1]]\n",
+    "        # Need to add 1 at start and end\n",
+    "        plist = []\n",
+    "        def pascal(n):\n",
+    "            if n == 1:\n",
+    "                plist.append([1])\n",
+    "                return [1]\n",
     "            else:\n",
-    "                last_line = pascal(numRows-1)\n",
-    "                # print(f\"return {numRows} - {last_line} - {ll}\")\n",
+    "                upper_row = pascal(n-1)\n",
+    "                l = [1]\n",
+    "                for i in range(len(upper_row)-1):\n",
+    "                    l.append(upper_row[i] + upper_row[i+1])\n",
     "                l.append(1)\n",
-    "                for i in range(numRows-2):\n",
-    "                    num = last_line[i]+last_line[i+1]\n",
-    "                    l.append(num)\n",
-    "                l.append(1)\n",
-    "            ll.append(l)\n",
-    "            return(l)\n",
+    "                plist.append(l)\n",
+    "                return l\n",
     "            \n",
     "        pascal(numRows)\n",
-    "        return ll"
+    "        return plist\n",
+    "        \n",
+    "        \n",
+    "        #         # V1 Try using recursion\n",
+    "#         # Base case, and then recursive call\n",
+    "        \n",
+    "#         ll = []\n",
+    "        \n",
+    "#         def pascal(numRows):\n",
+    "#             # print(f'Start {numRows}')\n",
+    "#             l = []\n",
+    "#             if numRows==1:\n",
+    "#                 l.append(1)\n",
+    "#             else:\n",
+    "#                 last_line = pascal(numRows-1)\n",
+    "#                 # print(f\"return {numRows} - {last_line} - {ll}\")\n",
+    "#                 l.append(1)\n",
+    "#                 for i in range(numRows-2):\n",
+    "#                     num = last_line[i]+last_line[i+1]\n",
+    "#                     l.append(num)\n",
+    "#                 l.append(1)\n",
+    "#             ll.append(l)\n",
+    "#             return(l)\n",
+    "            \n",
+    "#         pascal(numRows)\n",
+    "#         return ll"
    ]
   },
   {
