--- a/566. Reshape the Matrix.ipynb
+++ b/566. Reshape the Matrix.ipynb
@@ -3,46 +3,46 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b5576395",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\"\"\"\n",
-    "Should have a modulus option without making the eles list? Maybe inner for loop\n",
-    "\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "a55cdc84",
    "metadata": {},
    "outputs": [],
    "source": [
     "class Solution:\n",
     "    def matrixReshape(self, mat: List[List[int]], r: int, c: int) -> List[List[int]]:\n",
-    "       # reshape m x n matrix into r x n\n",
-    "       # rows fill in new matrix first (row-traversing order)\n",
-    "       # Need to get indices of mat based off of R. Use modulus\n",
-    "    \n",
-    "        # Could do indices or just flatten first for ease of use\n",
+    "        # Simple way is to just flatten elements, and then append to matrix\n",
     "        \n",
-    "        if len(mat)*len(mat[0]) != r*c:\n",
+    "        flat = [ele for sublist in mat for ele in sublist]\n",
+    "        if len(flat) != r*c:\n",
     "            return mat\n",
     "        \n",
-    "        num = 0\n",
-    "        new_list, temp_list = [], []\n",
-    "        for l in mat:\n",
-    "            for ele in l: # Double for loop flattens elements\n",
-    "                temp_list.append(ele)\n",
-    "                num += 1\n",
+    "        l = []\n",
+    "        for i in range(r):\n",
+    "            l.append(flat[i*c:(i+1)*c])\n",
+    "        return l\n",
+    "\n",
+    "#         # V3 - Don't need flattened list. Could just iterate through all elements\n",
+    "#         # reshape m x n matrix into r x n\n",
+    "#        # rows fill in new matrix first (row-traversing order)\n",
+    "#        # Need to get indices of mat based off of R. Use modulus\n",
+    "#         # Could do indices or just flatten first for ease of use\n",
+    "        \n",
+    "#         if len(mat)*len(mat[0]) != r*c:\n",
+    "#             return mat\n",
+    "        \n",
+    "#         num = 0\n",
+    "#         new_list, temp_list = [], []\n",
+    "#         for l in mat:\n",
+    "#             for ele in l: # Double for loop flattens elements\n",
+    "#                 temp_list.append(ele)\n",
+    "#                 num += 1\n",
     "    \n",
-    "                if num == c:\n",
-    "                    new_list.append(temp_list)\n",
-    "                    temp_list = []\n",
-    "                    num = 0\n",
-    "        return new_list\n",
+    "#                 if num == c:\n",
+    "#                     new_list.append(temp_list)\n",
+    "#                     temp_list = []\n",
+    "#                     num = 0\n",
+    "#         return new_list\n",
     "    \n",
+    "\n",
     "    # # V2 - Numpy version works, but slower and 2x more memory intensive\n",
     "    #     import numpy as np\n",
     "    #     mat = np.array(mat)\n",
