--- a/74. Search a 2D Matrix.ipynb
+++ b/74. Search a 2D Matrix.ipynb
@@ -21,21 +21,31 @@
    "source": [
     "class Solution:\n",
     "    def searchMatrix(self, matrix: List[List[int]], target: int) -> bool:\n",
-    "        \"\"\"\n",
-    "        1) Find row where target value is in\n",
-    "        2) Depending on if closer to next row or current row value, start from top or bottom\n",
-    "        \"\"\"\n",
-    "        for i, r in enumerate(matrix):\n",
-    "            # Find row\n",
-    "            if r[0] > target:\n",
-    "                row = matrix[i-1]\n",
-    "                break;\n",
-    "            else:\n",
-    "                row = matrix[i]\n",
+    "        # Find row integer by checking first value\n",
+    "        # Then could binary search in row (m x n matrix where n <= 100 (linear is ok))\n",
+    "        i = 0\n",
+    "        for row in matrix:\n",
+    "            if target < row[0]:\n",
+    "                break\n",
+    "            i += 1\n",
+    "        return target in matrix[i-1]\n",
+    "\n",
+    "        #         \"\"\"\n",
+    "#         V1\n",
+    "        # 1) Find row where target value is in\n",
+    "#         2) Depending on if closer to next row or current row value, start from top or bottom\n",
+    "#         \"\"\"\n",
+    "#         for i, r in enumerate(matrix):\n",
+    "#             # Find row\n",
+    "#             if r[0] > target:\n",
+    "#                 row = matrix[i-1]\n",
+    "#                 break;\n",
+    "#             else:\n",
+    "#                 row = matrix[i]\n",
     "            \n",
-    "        if target in row:\n",
-    "            return True\n",
-    "        return False"
+    "#         if target in row:\n",
+    "#             return True\n",
+    "#         return False"
    ]
   }
  ],
