--- a/242. Valid Anagram.ipynb
+++ b/242. Valid Anagram.ipynb
@@ -11,6 +11,9 @@
     "    def isAnagram(self, s: str, t: str) -> bool:\n",
     "        return sorted(s) == sorted(t)\n",
     "        \n",
+    "        # # V2\n",
+    "        # return sorted(s) == sorted(t)\n",
+    "        \n",
     "#         # Sol 1. Works but slow\n",
     "#         t = list(t)\n",
     "#         for c in s:\n",
