--- a/383. Ransom Note.ipynb
+++ b/383. Ransom Note.ipynb
@@ -9,25 +9,40 @@
    "source": [
     "class Solution:\n",
     "    def canConstruct(self, ransomNote: str, magazine: str) -> bool:\n",
-    "        # Count characters in magazine in dict\n",
-    "        # Count characters in random in dct\n",
-    "        # If for each key in random, it is <= magazine, return T else F\n",
-    "        dm, dr = {}, {}\n",
+    "        # V2 is faster and simpler than a dictionary and counting characters\n",
+    "        # Could use counter and compare values\n",
+    "        # Could sort and just compare letters -> probably easier\n",
     "        \n",
-    "        for c in magazine:\n",
-    "            dm[c] = dm.get(c,0)+1\n",
-    "        for c in ransomNote:\n",
-    "            dr[c] = dr.get(c,0)+1\n",
-    "            \n",
-    "        for k,v in dr.items():\n",
+    "        l1 = list(ransomNote)\n",
+    "        l2 = list(magazine)\n",
+    "        for c in l1:\n",
     "            try:\n",
-    "                if v <= dm.get(k, 0):\n",
-    "                    pass\n",
-    "                else:\n",
-    "                    return False\n",
+    "                l2.remove(c)\n",
     "            except:\n",
     "                return False\n",
-    "        return True"
+    "        return True\n",
+    "        \n",
+    "\n",
+    "#         # V1\n",
+    "#         # Count characters in magazine in dict\n",
+    "#         # Count characters in random in dct\n",
+    "#         # If for each key in random, it is <= magazine, return T else F\n",
+    "#         dm, dr = {}, {}\n",
+    "        \n",
+    "#         for c in magazine:\n",
+    "#             dm[c] = dm.get(c,0)+1\n",
+    "#         for c in ransomNote:\n",
+    "#             dr[c] = dr.get(c,0)+1\n",
+    "            \n",
+    "#         for k,v in dr.items():\n",
+    "#             try:\n",
+    "#                 if v <= dm.get(k, 0):\n",
+    "#                     pass\n",
+    "#                 else:\n",
+    "#                     return False\n",
+    "#             except:\n",
+    "#                 return False\n",
+    "#         return True"
    ]
   }
  ],
