--- a/20. Valid Parentheses.ipynb
+++ b/20. Valid Parentheses.ipynb
@@ -3,6 +3,37 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "2c55576a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def isValid(self, s: str) -> bool:\n",
+    "    # For c in s\n",
+    "    # If left bracket, append to stack\n",
+    "    # If right bracket, pop stack and compare\n",
+    "    # If violation, return False\n",
+    "    # Return True\n",
+    "    l = []\n",
+    "    dleft = {'(': ')',\n",
+    "             '{': '}',\n",
+    "             '[': ']',\n",
+    "            }\n",
+    "    for c in s:\n",
+    "        if c in dleft:\n",
+    "            l.append(c)\n",
+    "        else:\n",
+    "            try:\n",
+    "                if c != dleft[l.pop()]:\n",
+    "                    return False\n",
+    "            except:\n",
+    "                return False\n",
+    "\n",
+    "    return len(l)==0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "1a9903cc",
    "metadata": {},
    "outputs": [],
