--- a/232. Implement Queue using Stacks.ipynb
+++ b/232. Implement Queue using Stacks.ipynb
@@ -3,6 +3,71 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "466353b6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MyQueue:\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        self.enq, self.deque = [], []\n",
+    "\n",
+    "    def push(self, x: int) -> None:\n",
+    "        self.enq.append(x)\n",
+    "\n",
+    "    def pop(self) -> int:\n",
+    "        if not self.deque:\n",
+    "            while self.enq:\n",
+    "                self.deque.append(self.enq.pop())\n",
+    "        return self.deque.pop()\n",
+    "\n",
+    "    def peek(self) -> int:\n",
+    "        if not self.deque:\n",
+    "            while self.enq:\n",
+    "                self.deque.append(self.enq.pop())\n",
+    "        return self.deque[-1]\n",
+    "\n",
+    "    def empty(self) -> bool:\n",
+    "        return not (self.enq or self.deque)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aaffb778",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#     # V1 works\n",
+    "#     # To make a queue with two stacks, put all in 1 stack\n",
+    "#     # When deque, move first stack onto second stack\n",
+    "#     # eg, stack 1 = 1 2 3 -> empty\n",
+    "#     #     stack 2 empty -> 3 2 1. Now popping is FIFO\n",
+    "#     def __init__(self):\n",
+    "#         self.enq, self.deque = [], []\n",
+    "\n",
+    "#     def push(self, x: int) -> None:\n",
+    "#         self.enq.append(x)\n",
+    "\n",
+    "#     def pop(self) -> int:\n",
+    "#         if not self.deque:\n",
+    "#             while self.enq:\n",
+    "#                 self.deque.append(self.enq.pop())\n",
+    "#         return self.deque.pop()\n",
+    "        \n",
+    "#     def peek(self) -> int:\n",
+    "#         if not self.deque:\n",
+    "#             while self.enq:\n",
+    "#                 self.deque.append(self.enq.pop())\n",
+    "#         return self.deque[-1]\n",
+    "\n",
+    "#     def empty(self) -> bool:\n",
+    "#         return not self.enq and not self.deque"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "87887e78",
    "metadata": {},
    "outputs": [],
