--- a/144. Binary Tree Preorder Traversal.ipynb
+++ b/144. Binary Tree Preorder Traversal.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c8d672fd",
+   "id": "0f4c25ee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,18 +14,23 @@
     "#         self.left = left\n",
     "#         self.right = right\n",
     "class Solution:\n",
-    "    def maxDepth(self, root: Optional[TreeNode]) -> int:\n",
+    "    def preorderTraversal(self, root: Optional[TreeNode]) -> List[int]:\n",
+    "        # Preorder means P L R. So append first\n",
+    "        l = []\n",
     "        def traverse(root):\n",
     "            if root:\n",
-    "                return 1 + max(traverse(root.left), traverse(root.right))\n",
-    "            return 0\n",
-    "        return traverse(root)"
+    "                l.append(root.val)\n",
+    "                traverse(root.left)\n",
+    "                traverse(root.right)\n",
+    "            return\n",
+    "        traverse(root)\n",
+    "        return l"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9907c054",
+   "id": "a3d93b59",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,16 +41,16 @@
     "#         self.left = left\n",
     "#         self.right = right\n",
     "class Solution:\n",
-    "    def maxDepth(self, root: Optional[TreeNode]) -> int:\n",
+    "    def preorderTraversal(self, root: Optional[TreeNode]) -> List[int]:\n",
+    "        # Preorder = P L R\n",
     "        l = []\n",
-    "        def traverse(root, i):\n",
+    "        def traverse(root):\n",
     "            if root:\n",
-    "                traverse(root.left, i+1)\n",
-    "                traverse(root.right, i+1)\n",
-    "            l.append(i)\n",
-    "        traverse(root, 0)\n",
-    "        \n",
-    "        return max(l)"
+    "                l.append(root.val)\n",
+    "                traverse(root.left)\n",
+    "                traverse(root.right)\n",
+    "        traverse(root)\n",
+    "        return l"
    ]
   }
  ],
