--- a/145. Binary Tree Postorder Traversal.ipynb
+++ b/145. Binary Tree Postorder Traversal.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c8d672fd",
+   "id": "1d5727a7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,18 +14,24 @@
     "#         self.left = left\n",
     "#         self.right = right\n",
     "class Solution:\n",
-    "    def maxDepth(self, root: Optional[TreeNode]) -> int:\n",
+    "    def postorderTraversal(self, root: Optional[TreeNode]) -> List[int]:\n",
+    "        # Postorder is L R P, so append at end\n",
+    "        l = []\n",
     "        def traverse(root):\n",
     "            if root:\n",
-    "                return 1 + max(traverse(root.left), traverse(root.right))\n",
-    "            return 0\n",
-    "        return traverse(root)"
+    "                traverse(root.left)\n",
+    "                traverse(root.right)\n",
+    "                l.append(root.val)\n",
+    "            return\n",
+    "        traverse(root)\n",
+    "        return l\n",
+    "                "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9907c054",
+   "id": "97c41be1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,16 +42,16 @@
     "#         self.left = left\n",
     "#         self.right = right\n",
     "class Solution:\n",
-    "    def maxDepth(self, root: Optional[TreeNode]) -> int:\n",
+    "    def postorderTraversal(self, root: Optional[TreeNode]) -> List[int]:\n",
+    "        # Order is L R P\n",
     "        l = []\n",
-    "        def traverse(root, i):\n",
+    "        def traverse(root):\n",
     "            if root:\n",
-    "                traverse(root.left, i+1)\n",
-    "                traverse(root.right, i+1)\n",
-    "            l.append(i)\n",
-    "        traverse(root, 0)\n",
-    "        \n",
-    "        return max(l)"
+    "                traverse(root.left)\n",
+    "                traverse(root.right)\n",
+    "                l.append(root.val)\n",
+    "        traverse(root)\n",
+    "        return l"
    ]
   }
  ],
