updated and more lt sols'

--- a/653. Two Sum IV - Input is a BST.ipynb
+++ b/653. Two Sum IV - Input is a BST.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f70280d",
+   "id": "b7d402f1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,19 +14,26 @@
     "#         self.left = left\n",
     "#         self.right = right\n",
     "class Solution:\n",
-    "    def isValidBST(self, root: Optional[TreeNode]) -> bool:\n",
-    "        # Recurse through\n",
-    "        # Pass additional parameters low, and high\n",
-    "        # Value needs to stay between the two\n",
-    "        def traverse(root, low, high):\n",
+    "    def findTarget(self, root: Optional[TreeNode], k: int) -> bool:\n",
+    "        # Grab all values of bst in dict\n",
+    "        # Check for difference in dict keys\n",
+    "        d = {}\n",
+    "        def traverse(root):\n",
     "            if root is None:\n",
-    "                return True\n",
-    "            # print('left', low, root.val, high)\n",
-    "            if low >= root.val or root.val >= high :\n",
-    "                return False\n",
-    "            return traverse(root.left, low, root.val) and traverse(root.right, root.val, high)\n",
+    "                return None\n",
+    "            else:\n",
+    "                d[root.val] = None\n",
+    "                traverse(root.left)\n",
+    "                traverse(root.right)\n",
+    "        traverse(root)\n",
+    "        dkeys = list(d.keys())\n",
     "        \n",
-    "        return traverse(root, -math.inf, math.inf)"
+    "        # sort numbers and just check difference?\n",
+    "        # takes care of 1 element case\n",
+    "        for i, v in enumerate(dkeys):\n",
+    "            if k-v in dkeys[i+1:]:\n",
+    "                return True\n",
+    "        return False"
    ]
   }
  ],
