--- a/509. Fibonacci Number.ipynb
+++ b/509. Fibonacci Number.ipynb
@@ -8,7 +8,21 @@
    "outputs": [],
    "source": [
     "class Solution:\n",
-    "    # Fast memoized version. Trade a little space for a lot of speed\n",
+    "    # # V3 linear sum. V2 version might be better. less space and lsightly faster\n",
+    "    # s0, s1 = 0, 1\n",
+    "    # def fib(self, n: int) -> int:\n",
+    "    #     s = 0\n",
+    "    #     # Try version where we just sum last two nums\n",
+    "    #     if n == 0:\n",
+    "    #         return 0\n",
+    "    #     elif n == 1:\n",
+    "    #         return 1\n",
+    "    #     for i in range(n-1):\n",
+    "    #         s = self.s0 + self.s1\n",
+    "    #         self.s0, self.s1 = self.s1, s\n",
+    "    #     return s\n",
+    "\n",
+    "    # V2 Fast memoized version. Trade a little space for a lot of speed\n",
     "    d = {0: 0, 1: 1}\n",
     "    \n",
     "    def fib(self, n: int) -> int:\n",
@@ -19,7 +33,7 @@
     "            self.d[n] = result\n",
     "            return result\n",
     "        \n",
-    "        # # slow working version\n",
+    "        # # V1 slow working version\n",
     "        # if n == 0:\n",
     "        #     return 0\n",
     "        # elif n == 1:\n",
