--- a/53. Maximum Subarray.ipynb
+++ b/53. Maximum Subarray.ipynb
@@ -24,18 +24,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Kadane's algorithm\n",
     "class Solution:\n",
     "    def maxSubArray(self, nums: List[int]) -> int:\n",
-    "        # Keep two running variables: max_sum, and cur_sum\n",
-    "        # If cur_sum is larger than max_sum, replace\n",
-    "        max_sum = -math.inf\n",
-    "        cur_sum = 0\n",
-    "        for num in nums:\n",
-    "            cur_sum = max(num, cur_sum+num)\n",
+    "        # 11-8-22 reimplemented\n",
+    "        cur_sum, max_sum = 0, -math.inf\n",
+    "        for n in nums:\n",
+    "            cur_sum = max(cur_sum + n, n)\n",
     "            if cur_sum > max_sum:\n",
     "                max_sum = cur_sum\n",
     "        return max_sum\n",
+    "\n",
+    "        # # Keep two running variables: max_sum, and cur_sum\n",
+    "        # # If cur_sum is larger than max_sum, replace\n",
+    "        # max_sum = -math.inf\n",
+    "        # cur_sum = 0\n",
+    "        # for num in nums:\n",
+    "        #     cur_sum = max(num, cur_sum+num)\n",
+    "        #     if cur_sum > max_sum:\n",
+    "        #         max_sum = cur_sum\n",
+    "        # return max_sum\n",
     "        \n",
     "#         # V1\n",
     "#         # Keep a subarray where we keep adding nums to\n",
