--- a/121. Best Time to Buy and Sell Stock.ipynb
+++ b/121. Best Time to Buy and Sell Stock.ipynb
@@ -9,43 +9,24 @@
    "source": [
     "class Solution:\n",
     "    def maxProfit(self, prices: List[int]) -> int:\n",
-    "        # Keep max_prof, and cur_prof variable\n",
-    "        # Need to keep track of plow\n",
-    "        # return max profit\n",
+    "        # Keep track of lowest price, and max profit\n",
+    "        # Iterate through prices\n",
+    "        priceLowest, maxProfit = math.inf, 0\n",
+    "        for price in prices:\n",
+    "            priceLowest = min(priceLowest, price)\n",
+    "            maxProfit = max(maxProfit, price-priceLowest)\n",
+    "        return maxProfit\n",
     "        \n",
-    "        max_prof, cur_prof, plow = 0, 0, math.inf\n",
+    "        # V1 same idea but more verbose\n",
+    "        # max_prof, cur_prof, plow = 0, 0, math.inf\n",
     "        \n",
-    "        for p in prices:\n",
-    "            cur_prof = p-plow\n",
-    "            if cur_prof > max_prof:\n",
-    "                max_prof = cur_prof\n",
-    "            if p < plow:\n",
-    "                plow = p\n",
-    "        return max_prof\n",
-    "\n",
-    "#        # V2\n",
-    "#        # Key is if p is lower than plow, start at plow\n",
-    "#        # Any higher later prices will be based off of plow\n",
-    "    \n",
-    "#         # Passes, and same speed as solution\n",
-    "#         plow = prices[0]\n",
-    "#         top_profit = 0\n",
-    "        \n",
-    "#         for p in prices:\n",
-    "#             profit = p-plow\n",
-    "#             if profit > top_profit:\n",
-    "#                 top_profit = profit\n",
-    "#             if p < plow:\n",
-    "#                 plow = p\n",
-    "#         return top_profit\n",
-    "        \n",
-    "#         # # V1. Probably works, but time limit exceeded\n",
-    "#         # top_profit = 0\n",
-    "#         # for i, p in enumerate(prices):\n",
-    "#         #     profit = max(prices[i:]) - p\n",
-    "#         #     if profit > top_profit:\n",
-    "#         #         top_profit = profit\n",
-    "#         # return top_profit"
+    "        # for p in prices:\n",
+    "        #     cur_prof = p-plow\n",
+    "        #     if cur_prof > max_prof:\n",
+    "        #         max_prof = cur_prof\n",
+    "        #     if p < plow:\n",
+    "        #         plow = p\n",
+    "        # return max_prof"
    ]
   }
  ],
